--- a/src/components/Tables/Tables.module.scss
+++ b/src/components/Tables/Tables.module.scss
@@ -52,7 +52,7 @@
             border-bottom: 1px solid rgb(100, 99, 99);
             th {
               display: flex;
-              justify-content: start;
+              justify-content: flex-start;
               padding: 5px;
             }
             td {
